<resources>
    <string name="app_name">Personal Assistant UK</string>
    <string name="title_activity_ujian_tugas">Assignment and Exam</string>
    <string name="title_activity_absen">Absent</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_popup_event">Add Event</string>
    <string name="title_activity_popup_schedule">Add Schedule</string>

    <string name="tab_text_1">Exam</string>
    <string name="tab_text_2">Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="developer_name">Team pauk</string>
    <string name="developer1">Christian Monintja</string>
    <string name="developer2">Hezly Yermia Charlos Pertama</string>
    <string name="pembimbing">Jimmy Moedjahedy</string>

    <integer-array name="timer">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </integer-array>

    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="no_exam">Click on the button below to begin creating your exam reminder!</string>
    <string name="no_assignment">Click on the button below to begin creating your assignment reminder!</string>
    <string name="no_absen">Woohoo, no absent yet!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_event">Event</string>
    <string name="add_schedule">Schedule</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Timer</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_new_assexam">Add Assignment or Exam Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="editor_activity_title_edit_assexam">Edit Assignment/Exam</string>
    <string name="editor_title_popup_new_event">Add Event</string>
    <string name="editor_title_popup_edit_event">Edit Event</string>
    <string name="editor_title_popup_new_schedule">Add Schedule</string>
    <string name="editor_title_popup_edit_schedule">Edit Schedule</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title_schedule">Schedule Reminder</string>
    <string name="reminder_title_event">Event Reminder</string>
    <string name="reminder_title_assexam">Assignment and Exam Reminder</string>
    <string name="title_activity_help">Help</string>


    <!--Help Text-->
    <string name="help_help_title">Membuat reminder :</string>
    <string name="help_help_1">
        Tekan card reminder -> pilih button (+) -> masukan nama reminder -> tekan list reminder yang dibuat -> selanjutnya
        masukan informasi -> tekan tombol save dikanan atas.
    </string>
    <string name="help_help_title2">Menghapus reminder :</string>
    <string name="help_help_2">
        Tekan card reminder -> tahan list yang akan dihapus -> setelah itu pilih yes.
    </string>
    <string name="help_help_title3">Mengubah reminder :</string>
    <string name="help_help_3">
        Tekan card reminder -> tekan list yang akan diedit -> pilih save
    </string>
    <string name="help_help_title4">Cek absen</string>
    <string name="help_help_4">
        Tekan menu absen -> tekan Click here to input NIM! -> Masukan NIM -> Pilih Ok -> Tekan tombol refresh
        pada kanan atas.
    </string>

</resources>
